--- a/style.css
+++ b/style.css
@@ -25,12 +25,26 @@ header{
   box-shadow: 20px 0px 30px rgba(0, 0, 0, 0.12);
 }
 
+
+header .container{
+  width:400px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  align-items:center;
+}
+
 header .container img{
-  width:90%;
+  width:150px;
+}
+
+header .container h3{
+  color:wheat;
+  font-size:14px;
 }
 
 header .container select{
-  width:100%;
+  width:300px;
   height:40px;
   border:none;
   border-radius: 50px;
@@ -41,7 +55,7 @@ main{
   width:100%;
   height: 100%;
   margin-top:100px;
-  margin-left:30%;
+  margin-left:28%;
   display:flex;
   flex-wrap:wrap;
   position:relative;
@@ -49,8 +63,8 @@ main{
 }
 
 .article{
-  width:280px;
-  margin:80px 60px;
+  width:20%;
+  margin:80px 40px;
   padding:10px 30px;
   background: #FFFFFF;
   border-radius:10px;
@@ -82,6 +96,7 @@ main{
   font-size:14px;
   color: rgba(0, 0, 0, 0.6);
   letter-spacing:1px;
+  margin-bottom:60px;
 }
 
 .article .details a{
@@ -94,6 +109,9 @@ main{
   float:right;
   text-decoration:none;
   background:rgb(0, 110, 255);
+  position:absolute;
+  right:15px;
+  bottom:15px;
 }
 
 
