--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto');
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
@@ -47,9 +54,18 @@ header .container select{
   width:300px;
   height:40px;
   border:none;
+  font-size: 16px;
+  color: #60666d;
   border-radius: 50px;
   padding: 10px 20px;
 }
+
+header .container select option {
+  margin-top:20px;
+  background:#fff;
+  cursor: pointer;  
+}
+
 
 main{
   width:100%;
